fix: Update overflow property in card_view_scrollable for better scrolling behavior

--- a/src/index.css
+++ b/src/index.css
@@ -495,10 +495,10 @@ code {
 
   .card_view_scrollable {
     max-height: 90dvh;
-    overflow: scroll;
+    overflow-y: auto;
     display: block;
   }
-  
+
   .card_view_content {
     width: 100%;
   }
